correct non displayed section mobile height

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post-content h1, h2, h3, h4, h5, h6 {
-  height: 44px;
+  height: 46px;
 }
 
 .site-logo {
@@ -380,6 +380,11 @@ figcaption {
 }
 
 @media (max-width: 624px) {
+
+
+  .post-content h1, h2, h3, h4, h5, h6 {
+    height: 20px;
+  }
 
   .site-nav {
     background: none;
